[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/GameOverScreen.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.156863, 0.133333, 0.133333, 0.403922 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Kenney Future.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Kenney Future.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Kenney Future.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/Kenney Future.ttf"

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = SubResource( 7 )

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 250.0
margin_top = -21.0
margin_right = -257.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -23.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 39.5305
margin_bottom = 62.5305
custom_fonts/font = SubResource( 4 )
text = "Score: 00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 86.012
margin_right = 80.0
margin_bottom = 115.012
custom_fonts/font = SubResource( 6 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.4703
margin_top = 125.05
margin_right = 80.5297
margin_bottom = 154.05
custom_fonts/font = SubResource( 8 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
